[gd_scene load_steps=2 format=3 uid="uid://dpfpjghkspelg"]

[ext_resource type="Script" uid="uid://bb3y1y8lfo4l4" path="res://shop/shop_ui.gd" id="1_0"]

[node name="ShopUI" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -171.0
offset_right = 210.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "SHOP"

[node name="CashLabel" type="Label" parent="Panel/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Coins: 0"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Close Shop"

[node name="PlayAgainButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Play Again"

[connection signal="pressed" from="Panel/VBoxContainer/ButtonContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
